# rust_backend

./: README.md
backend/: Cargo.toml
backend/src/: error.rs  log.rs  main.rs  model.rs
backend/src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
backend/tests/: quick_dev.rs
