[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.4"
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.112"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.9"